# compositional-memory-machine

./: .gitignore  README.md  conversation_demo.py  demo.py  ingest_text.py  pyproject.toml  query.py  real_text_demo.py  reverse_lookup.py  web.py
cli/: README.md  mcp_cli.py  requirements.txt  workbench_cli.py
data/: medical_wikidata_qid_map.json
docs/: research-roadmap.md  research-synthesis.md
experiments/: __init__.py  common.py  conversation_benchmark_cases.py  exp_addr_dim_sweep.py  exp_chunked_multihop.py  exp_codebase_memory.py  exp_collision_stress.py  exp_conversation_benchmark.py  exp_d2824_ci_storage.py  exp_d2825_composition.py  exp_d2827_dimension_sweep.py  exp_d2829_next_token.py  exp_d2830_word_learning.py  exp_d2833_emergent_syntax.py  exp_d2834_closed_loop_qa.py  exp_d2836_episodic_memory.py  exp_d2838_compositional_generation.py  exp_d2839_sequence_chain.py  exp_d2846_sdm_nlocs.py  exp_d2849_probabilistic_next_token.py  exp_d2850_temporal_role_binding.py  exp_d2851_pragmatic_roles.py  exp_d2852_narrative_chunking.py  exp_d2854_generation_boundary.py  exp_d2855_hierarchical_syntax.py  exp_d2856_failure_boundary.py  exp_d2857_language_revision.py  exp_d2872_dynamic_overwrite_scaling.py  exp_hf_corpus_ingest.py  exp_large_document_memory.py  exp_projected_address_sweep.py  exp_projected_sdm_capacity.py  exp_projected_sdm_ngram.py  exp_projected_sdm_readout.py  exp_projected_sdm_stress.py  exp_projected_sdm_trigram.py  exp_relation_concept_memory.py  exp_relation_fallback_real_corpus.py  exp_reverse_attribute_lookup.py  exp_revision_chain3.py  (+6 more)
(+78 files in other folders)
