[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hrr-language-memory-poc"
version = "0.1.0"
description = "Minimal HRR+AMM language memory proof of concept"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
hf = [
    "datasets>=2.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["experiments*", "factgraph*", "generation*", "hrr*", "ingestion*", "language*", "memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
